Made the JavaDoc compiler work on Java 9 and newer. Moved the code to Java 8. Moved project to version 1.0.12.